--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,18 @@ body{
     align-items: center;
     height: 100vh;
 }
+
+button{
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #6a4c87;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #9a7b9f;
+}   
